--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="container-child__right">
 			<h1 class="font-black">Priority #1: make cool stuff</h1>
 			<p>
-				I'm a Software Engineering student at the University of Victoria. I like building things that use data in interesting ways, I study machine learning in my spare time, and I code mostly in Python/Go/JavaScript/Scala
+				I'm a Software Engineering student at the University of Victoria. I like building things that use data in interesting ways, I study machine learning in my spare time, and I code mostly in Python/Go/JavaScript/Scala.
 		 	</p>
 		 	<br>
 		 	<br>
