--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 						LinkedIn<b>-</b>
 					</a>
 				</li>
-				<!-- <li>
-					<a href="https://www.linkedin.com/in/erikreppel">
+				<li>
+					<a href="resume.pdf">
 						Resume<b>-</b>
 					</a>
-				</li> -->
+				</li>
 			</ul>
 		</div>
 		<div class="container-child__right">
