Change colors, add resume, add pic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="flex flex__vertical-center flex__horizontal-center">
 	<div class="flex container">
 		<div class="flex flex__direction-col container-child__left">
+			<img class="profile" src="imgs/profile.png">
 			<h1>Erik Reppel</h1>
 			<ul class="flex__stick-end">
 				<li>
@@ -17,14 +18,19 @@
 						Github<b>-</b>
 					</a>
 				</li>
-				<!-- <li>
-					<a href="">
+				 <li>
+					<a href="https://twitter.com/programmer">
 						Twitter<b>-</b>
 					</a>
-				</li> -->
+				</li> 
 				<li>
 					<a href="https://www.linkedin.com/in/erikreppel">
 						LinkedIn<b>-</b>
+					</a>
+				</li>
+				<li>
+					<a href="https://medium.com/@erikreppel">
+						Medium<b>-</b>
 					</a>
 				</li>
 				<li>
@@ -35,9 +41,15 @@
 			</ul>
 		</div>
 		<div class="container-child__right">
-			<h1 class="font-black">Priority #1: make cool stuff</h1>
+			<h3 class="font-black">Developer, Student</h1>
 			<p>
-				I'm a Software Engineering student at the University of Victoria. I like building things that use data in interesting ways, I study machine learning in my spare time, and I code mostly in Python/Go/JavaScript/Scala.
+				
+				I study<b>computer science</b> at the<b>University of Victoria</b>. I love learning new things and building interesting stuff.<br><br>
+				My current software interests are primarily<br><b>deep learning / big data / cryptocurrencies</b>
+	
+
+
+
 		 	</p>
 		 	<br>
 		 	<br>
