Fix some copy issues

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 			<h3 class="font-black">Developer, Student</h1>
 			<p>
 				
-				I study<b>computer science</b> at the<b>University of Victoria</b>. I love learning new things and building interesting stuff.<br><br>
-				My current software interests are primarily<br><b>deep learning / big data / cryptocurrencies</b>
+				I study<b>computer science</b> at the<b>University of Victoria</b>.
+				<br>I love learning new things and building interesting stuff.<br><br>
+				My current software interests are primarily:<br><b>deep learning / big data / cryptocurrencies</b>
 	
 
 
