--- a/sketch/index.html
+++ b/sketch/index.html
@@ -1,7 +1,7 @@
 <html>
 <header>
     <title>Deep Sketchpad!</title>
-    <link rel="stylesheet" type="text/css" href="sketch/web.005913db.css"> </header>
+    <link rel="stylesheet" type="text/css" href="web.005913db.css"> </header>
 
 <body>
     <h1>Deep Sketchpad</h1>
@@ -25,14 +25,14 @@
     <a id="download-button" download="drawing.jpg">Click this text to save your work!</a>
     <h4>Start with an image:</h4>
     <input id="img-upload" type="file" name="img">
-    <img id="la_muse" src="sketch/la_muse.8b60654e.jpg">
-    <img id="rain_princess" src="sketch/rain_princess.93972b48.jpg">
-    <img id="scream" src="sketch/scream.c5c2e19f.jpg">>
-    <img id="udnie" src="sketch/udnie.f25c83ff.jpg">
-    <img id="wave" src="sketch/wave.819a76da.jpg" class="selectedImage">
-    <img id="wreck" src="sketch/wreck.e1d76fd3.jpg">
+    <img id="la_muse" src="la_muse.8b60654e.jpg">
+    <img id="rain_princess" src="rain_princess.93972b48.jpg">
+    <img id="scream" src="scream.c5c2e19f.jpg">>
+    <img id="udnie" src="udnie.f25c83ff.jpg">
+    <img id="wave" src="wave.819a76da.jpg" class="selectedImage">
+    <img id="wreck" src="wreck.e1d76fd3.jpg">
     <h2>Example Gallary (inprogress)</h2>
-    <img src="sketch/wave_abstract.2ec7790c.jpg">
-    <script src="sketch/web.448b1890.js"></script> </body>
+    <img src="wave_abstract.2ec7790c.jpg">
+    <script src="web.448b1890.js"></script> </body>
 
 </html>
